# rpc_practice

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
grpc/: club_pb2.py  club_pb2_grpc.py  grpc_client.py  grpc_manager.py  proto.bash  user_pb2.py  user_pb2_grpc.py
grpc/client/: user.py
grpc/json_data/: base.json  club.json  users.json
grpc/protos/: club.proto  user.proto
grpc/servicers/: base.py  club.py  user.py
