[tool.poetry]
name = "rpc_text"
version = "0.1.0"
description = ""
authors = ["kumamoto <onioni9999nagare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.50.0"
grpcio-tools = "^1.50.0"
grpcio-reflection = "^1.50.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
